# xinfo

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/xinfo/: __init__.py  __main__.py  _version.py  binutils.py  cache.py  cli.py  formatter.py
src/xinfo/commands/: desc.py  list.py
src/xinfo/config/: settings.py
src/xinfo/x/: columns.py  kqfcop.py  kqftab.py  kqftap.py
tests/: conftest.py  test-executable.c
tests/cache/: test_cache.py
tests/cli/: conftest.py  test_force.py  test_logging_args.py  test_no_input_params.py  test_ora_binary.py  test_ora_version.py  test_version.py
tests/commands/: conftest.py
tests/commands/desc/: test_desc.py
tests/commands/list/: test_list.py
tests/x/: conftest.py  test_columns.py  test_kqfcop.py  test_kqftab.py  test_kqftap.py
